# omop-link

./: .buildinfo  .buildinfo.bak  .copier-answers.yml  .cruft.json  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  config.public.mk  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml
.github/workflows/: deploy-docs.yaml  deploy-docs.yml  main.yaml  pypi-publish.yaml  test_pages_build.yaml
_sources/: index.rst.txt
_sources/schemas/: 00preamble.md.txt  01introduction.md.txt  Boolean.md.txt  Concept.md.txt  ConceptClass.md.txt  Curie.md.txt  Date.md.txt  DateOrDatetime.md.txt  Datetime.md.txt  Decimal.md.txt  Double.md.txt  Float.md.txt  Integer.md.txt  Jsonpath.md.txt  Jsonpointer.md.txt  NamedThing.md.txt  Ncname.md.txt  Nodeidentifier.md.txt  Objectidentifier.md.txt  Person.md.txt  PersonCollection.md.txt  PersonStatus.md.txt  Relationship.md.txt  Sparqlpath.md.txt  String.md.txt  Time.md.txt  Uri.md.txt  Uriorcurie.md.txt  Vocabulary.md.txt  age_in_years.md.txt  birth_date.md.txt  concept.md.txt  concept_id.md.txt  description.md.txt  domain_name.md.txt  entries.md.txt  id.md.txt  index.md.txt  invalid_reason.md.txt  is_hierarchical.md.txt  (+10 more)
about/: index.html
docs/: about.md  conf.py  index.md
docs/schema/: cdm_vocabulary.yaml  omop_profiles.yaml
docs/schemas/: Date.md  DateOrDatetime.md  DeletedConcept.md  Domain.md  Double.md  Integer.md  Jsonpath.md  Nodeidentifier.md  Objectidentifier.md  Sparqlpath.md  StandardConcept.md  Uri.md  (+15 more)
elements/: index.html
examples/: README.md
schema/: cdm_vocabulary.yaml  omop_named_sets.yaml  omop_profiles.yaml  omop_semantic_base.yaml
schemas/: 00preamble.html  01introduction.html  02schemas.html  Boolean.html  Concept.html  ConceptClass.html  Curie.html  Date.html  DateOrDatetime.html  Datetime.html  Decimal.html  DeletedConcept.html  Domain.html  Double.html  Float.html  Integer.html  Jsonpath.html  Jsonpointer.html  NamedThing.html  Ncname.html  Nodeidentifier.html  Objectidentifier.html  Person.html  PersonCollection.html  PersonStatus.html  README.html  Relationship.html  Sparqlpath.html  StandardConcept.html  String.html  Time.html  Uri.html  Uriorcurie.html  Vocabulary.html  about.html  age_in_years.html  birth_date.html  concept.html  concept_class_concept_id.html  concept_class_id.html  (+30 more)
search/: search_index.json
tests/: __init__.py  test_data.py
(+290 files in other folders)
