[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "omop_cdm"
description = "LinkML version of OMOP CDM including OMOP-tuned convention enforcement"
authors = [
  {name = "Georgie Kennedy", email = "my-name@my-org.org"},
]
license = "GNU GPL v3.0"
readme = "README.md"
include = ["README.md", "src/omop_cdm/schema", "project"]

requires-python = ">=3.9,<4.0"

dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.1.24",
  "poetry-dynamic-versioning>=1.9.1",
  "sphinxcontrib-programoutput>=0.18",
  "sphinx-jinja (>=2.0.2,<3.0.0)",
]

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.5.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = ">=1.3.5"
mkdocs-material = ">=8.2.8"
mkdocs-mermaid2-plugin = ">=1.1.1"
schemasheets = ">=0.1.14"
jupyter = ">=1.0.0"
mknotebooks = ">= 0.8.0"


[dependency-groups]
lint = [
    "black >= 24.0.0",
]
typing = [
    "numpydantic >= 1.6.1",
]
shacl = [
    "pyshacl >= 0.25.0",
]
tests = [
  { include-group = "lint" },
  { include-group = "typing" },
  { include-group = "shacl" },
  "morph-kgc >= 2.9.0; python_version >= '3.10'"
]
dev = [
  {include-group = "tests" },
  {include-group = "tests-extra" },
  {include-group = "pandera"},
  "chardet",
  "ipykernel",
  "ipython-genutils",
  "jupyter",
  "nbconvert",
  "nbformat",
  "coverage >= 6.4.1",
  "tox >= 4",
  "tox-uv",
  "myst-nb >= 1.0.0; python_version >= '3.9'",
  "sphinx-design >= 0.5.0",
  "rich >= 13.7.1",
  "gql>=4.0.0",
]

pandera = [
  "pandera >= 0.19.0",
  "polars-lts-cpu >= 1.0.0",
  "pandas"
]
tests-rustgen = [
  "maturin >= 1.9.4"
]

tests-extra = [
  "pytest >= 7.4.0",
  "pytest-subtests >= 0.11.0",
  "pytest-xdist >= 3.6.1",
  "numpy >= 1.24.3; python_version < '3.12'",
  "numpy >= 1.25.2; python_version >= '3.12'",
  "requests-cache >= 1.2.0",
  "mock >= 5.1.0",
  "testcontainers == 3.7.1",
  "jsonpatch >= 1.33",
]
docs = [
  "linkml = >=1.3.5",
  "furo >= 2023.03.27",
  "sphinxcontrib-mermaid >= 0.7.1",
  "sphinx",
  "sphinx-click",
  "sphinx-rtd-theme",
  "myst-parser",
  "matplotlib >= 3.7",
  "sphinx-jinja >= 2.0.2",
]
